# fmruby-graphics-audio

./: .env  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  Rakefile  THIRD_PARTY_LICENSES.md  build.sh  partitions.csv  sdkconfig.defaults  sdkconfig.defaults.linux  tatus
.devcontainer/: build.sh  run_devcontainer.sh
.github/workflows/: build.yml
components/apu_emu/: CMakeLists.txt
components/apu_emu/include/: apu_if.h  noftypes.h
components/apu_emu/src/: apu_if.cpp
components/apu_emu/src/nofrendo/: nes_apu.c
components/fmrb_pin_assign/: CMakeLists.txt
components/fmrb_pin_assign/include/: fmrb_pin_assign.h
components/msgpack-esp32/: CMakeLists.txt
components/msgpack-esp32/include/: msgpack_esp32.h
host/: CMakeLists.txt  README.md
host/common/: fmrb_link_cobs.h
host/include/: sdkconfig.h
host/sdl2/: CMakeLists.txt
host/sdl2/include/: audio_handler.h  socket_server.h
host/sdl2/src/: graphics_handler.cpp  main.cpp  socket_server.c
host/src/: main.cpp
main/: CMakeLists.txt  audio.cpp  lgfx_wrapper.cpp  main.c  main.cpp  main_esp32.cpp  main_linux.cpp  main_new.c  main_new.cpp  main_test.cpp  main_test2.cpp
main/audio/: audio_check.c  audio_handler.h  audio_handler_esp32.c  audio_handler_sdl2.c
main/common/: audio_commands.h  fmrb_gfx.h  fmrb_link_cobs.c  fmrb_link_cobs.h  fmrb_link_fragment.c  fmrb_link_fragment.h  fmrb_link_protocol.h  fmrb_link_types.h  lgfx_linux.h  socket_server.h
main/communication/: comm_interface.h  comm_socket.c  comm_socket_server.c  comm_spi.c  comm_spi_slave.c  fmrb_link_msgpack.c  fmrb_link_msgpack.h  message_queue.c  message_queue.h
main/display/: display_esp32.cpp  display_interface.h  display_sdl2.cpp
main/graphics/: display_cvbs.cpp  display_interface.h  display_sdl2.cpp  graphics_handler.cpp  graphics_handler.h  lgfx_test.cpp
main/handlers/: audio_handler.h  audio_handler_sdl2.c  graphics_handler.cpp  graphics_handler.h  input_handler.c  input_handler.h  input_socket.h
main/include/: fmrb_hid_event.h
main/input_linux/: input_handler.c  input_handler.h  input_socket.c  input_socket.h
main/mempool/: fmrb_mempool.c  fmrb_mempool.h
main/tasks/: audio_task.c  audio_task.h  comm_task.c  comm_task.h  graphics_task.c  graphics_task.cpp  graphics_task.h  message_handler.c  message_handler.h
patches/: lovyangfx-esp-idf-linux-support.patch
patches/esp_littlefs-files/: CMakeLists.txt
patches/lovyangfx-files/: Panel_sdl.cpp  README.md  common.hpp  device.hpp  esp-idf.cmake
